Added working questions and changed styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,9 +10,13 @@ body{
     /* color: white; */
 }
 #submitbutton{
-    
+    /* display: block; */
+    position: static;
+    margin-left: 47.5%;
+    margin-right: 50%;
 }
 
 .resultbox{
     background-color: white;
 }
+
