--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,13 @@
 body{
-    background-image: url('https://freerangestock.com/sample/53012/blue-shapes-background-means-rectangles-oblongs-and-arrows-.jpg');
     /* background-repeat: no-repeat; */
     background-attachment: fixed;
     display: block;
+    color: #fff;
+	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+	animation: gradientBG 15s ease infinite;
 }
+
 .col{
     /* background-color: gray; */
     text-align: center;
@@ -20,4 +24,21 @@ body{
     background-color: white;
 }
 
+@keyframes gradientBG {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
 
+h1 {
+	font-weight: 300;
+}
+
+
+}
